# kit-mandelbrot

./: LICENSE  README.md  pyproject.toml
src/kit_mandelbrot/: app_context.py  config.py  main.py
src/kit_mandelbrot/domain/: viewport.py
src/kit_mandelbrot/rendering/: pipeline.py  quad.py  texture_presenter.py
src/kit_mandelbrot/services/: fractal_engine.py  shader_manager.py
src/kit_mandelbrot/shaders/: mandelbrot_stability.frag.glsl  present.frag.glsl  present.vert.glsl  present_color.frag.glsl
src/kit_mandelbrot/ui/: cursor_coords.py  dependencies.py  hud.py  manager.py  types.py
