[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kit_mandelbrot"]

[project]
name = "kit-mandelbrot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "moderngl>=5.12.0",
    "numpy>=2.3.4",
    "plotly>=6.3.1",
    "pydantic>=2.12.4",
    "pyglet>=2.1.10",
]

[project.scripts]
kit-mandelbrot = "kit_mandelbrot.main:main"

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "pydebug>=1.0.3",
    "pytest>=8.4.2",
]

[tool.hatch.build]
include = [
  "src/kit_mandelbrot/shaders/**/*.glsl",
]
